# cvxjax

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  JIT_COMPATIBILITY_REPORT.md  LICENSE  Makefile  README.md  constraint_improvements_summary.md  final_imp_jit.py  imp_jit_integration.py  portfolio_qp.py  pyproject.toml  quickstart_qp.py  test_api.py  test_boxcdqp_api.py  test_boxcdqp_working.py  test_clean_ipm.py  test_jit_compatibility.py  test_simple_ipm.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cvxjax/: __init__.py  api.py  atoms.py  canonicalize.py  constraints.py  diff.py  expressions.py  jit_utils.py  layers.py
cvxjax/solvers/: __init__.py  boxcdqp_solver.py  boxosqp_solver.py  ipm_qp.py  osqp_bridge.py
cvxjax/utils/: __init__.py  checking.py  scaling.py  shapes.py
docs/: api_reference.md  concepts.md  getting_started.md  index.md  quickstart.md  troubleshooting.md
docs/api/: layers.md
examples/: lasso_training_loop.py  layer_qp_training.py  portfolio_qp.py
tests/: test_api.py  test_boxcdqp_comprehensive.py  test_boxcdqp_final.py  test_boxcdqp_precision_jit.py  test_boxcdqp_solver.py  test_canonicalize.py  test_diff.py  test_ipm_jit.py  test_jit_compatibility.py  test_jit_fixed.py  test_layers.py  test_solver_ipm.py  test_solver_osqp.py
